# reticula

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CPPLINT.cfg  Doxyfile  LICENSE  README.md  algorithms.tpp  dag.hpp  edges.tpp  makefile  network.tpp  random_network.tpp
.github/workflows/: codeql-analysis.yml  lint.yml  tests.yml
cmake/: dag-config.cmake.in  reticula-config.cmake.in
include/: .implicit_event_graph.hpp.swp  algorithms.hpp  dag.hpp  implicit_event_graph.hpp  networks.hpp  random_networks.hpp  static_edges.hpp  temporal_edges.hpp
include/dag/: adjacency_prob.hpp  algorithms.hpp  components.hpp  dag.hpp  edges.hpp  estimators.hpp  generators.hpp  implicit_event_graph.hpp  implicit_event_graph_components.hpp  intervals.hpp  io.hpp  microcanonical_reference_models.hpp  network_concepts.hpp  networks.hpp  random_networks.hpp  static_edges.hpp  static_hyperedges.hpp  temporal_adjacency.hpp  temporal_algorithms.hpp  temporal_clusters.hpp  temporal_components.hpp  temporal_edges.hpp  temporal_hyperedges.hpp  type_traits.hpp  utils.hpp
include/reticula/: algorithms.hpp  components.hpp  distributions.hpp  generators.hpp  implicit_event_graph_components.hpp  implicit_event_graphs.hpp  intervals.hpp  io.hpp  microcanonical_reference_models.hpp  network_concepts.hpp  networks.hpp  operations.hpp  random_networks.hpp  ranges.hpp  reticula.hpp  static_edges.hpp  static_hyperedges.hpp  stats.hpp  temporal_adjacency.hpp  temporal_algorithms.hpp  temporal_clusters.hpp  temporal_edges.hpp  temporal_hyperedges.hpp  type_traits.hpp  utils.hpp
scripts/: run_tests.sh
src/: adjacency_prob.tpp  algorithms.tpp  component_estimators.tpp  components.tpp  distributions.tpp  edges.tpp  estimators.tpp  generators.tpp  implicit_event_graph.tpp  implicit_event_graph_components.tpp  implicit_event_graphs.tpp  intervals.tpp  io.tpp  microcanonical_reference_models.tpp  networks.tpp  operations.tpp  out_component_size.tpp  out_component_size_estimate.tpp  random_networks.tpp  static_edges.tpp  static_hyperedges.tpp  stats.tpp  temporal_adjacency.tpp  temporal_algorithms.tpp  temporal_clusters.tpp  temporal_component_sizes.tpp  temporal_components.tpp  temporal_edges.tpp  temporal_hyperedges.tpp  utils.tpp
src/random_networks/: activation_temporal.tpp  barabasi_albert.tpp  degree_sequence.tpp  expected_degree_sequence.tpp  gmnp.tpp  gnp.tpp  regular.tpp  uniform_hypergraph.tpp
src/test/dag/: .implicit_event_graph.cpp.swp  adjacency_prob.cpp  algorithms.cpp  compile.cpp  components.cpp  edge_tests.cpp  estimators.cpp  generators.cpp  implicit_event_graph.cpp  implicit_event_graph_component.cpp  implicit_event_graph_components.cpp  intervals.cpp  io.cpp  microcanonical_reference_models.cpp  networks.cpp  random_networks.cpp  temporal_adjacency.cpp  temporal_algorithms.cpp  temporal_clusters.cpp  temporal_components.cpp
src/test/dag/io_test_files/: utf-8+space.csv  utf-8.csv
src/test/reticula/: algorithms.cpp  compile.cpp  components.cpp  distributions.cpp  edge_tests.cpp  generators.cpp  implicit_event_graph_components.cpp  implicit_event_graphs.cpp  intervals.cpp  io.cpp  microcanonical_reference_models.cpp  networks.cpp  operations.cpp  random_networks.cpp  stats.cpp  temporal_adjacency.cpp  temporal_algorithms.cpp  temporal_clusters.cpp  traits.cpp  utils.cpp
src/test/reticula/io_test_files/: README.md  utf-8+windows-le.csv
src/test/reticula/io_test_files/HIF-non-compliant/: bad_edge_field.json  bad_edge_without_id.json  bad_incidence_field.json  bad_network_type.json  bad_node_field.json  bad_node_float.json  bad_node_without_id.json  bad_top_level_field.json  extra_fields_with_direction.json  invalid_direction_value.json  metadata_as_list.json  missing_required_field_incidence.json  missing_required_fields_with_direction.json  single_incidence_with_direction_not_in_enum.json  single_incidence_with_weight_as_string.json
